--- a/src/Microsoft.Fx.Portability.Reports.Html/Resources/_PortabilityReport.cshtml
+++ b/src/Microsoft.Fx.Portability.Reports.Html/Resources/_PortabilityReport.cshtml
@@ -208,3 +208,48 @@
             </p>
         }
 </div>
+
+<div id="nugetpackageinfo">
+    <h3>Available NuGet Packages</h3>
+    @{
+        var nugetColumnHeaders = new List<string>();
+        nugetColumnHeaders.Add("Assembly");
+        nugetColumnHeaders.Add("Framework");
+        nugetColumnHeaders.Add("Package Id");
+        nugetColumnHeaders.Add("Package Version");
+    }
+    
+    <table>
+        <tbody>
+            <tr>
+                @foreach (var header in nugetColumnHeaders)
+                {
+                    <th>@header</th>
+                }
+            </tr>
+            @foreach (var nugetpackage in Model.NuGetPackages)
+            {
+                foreach (var package in nugetpackage.SupportedPackages)
+                {
+                    <tr>
+                        <td>@nugetpackage.AssemblyInfo</td>
+                        <td>@nugetpackage.Target.FullName</td>
+                        @if(!string.IsNullOrEmpty(package.Hyperlink))
+                        {
+                            <td><a href="@package.Hyperlink">@package.PackageId</a></td>
+                        }
+                        else
+                        { 
+                            <td>@package.PackageId</td>
+                        }
+                        <td>@package.Version</td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+
+    <p>
+        <a href="#@LocalizedStrings.PortabilitySummaryPageTitle">@LocalizedStrings.BackToSummary</a>
+    </p>
+</div>
